# ruix-dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: card.rs  data.rs  history.rs  ids.rs  layout_helpers.rs  main.rs  nav.rs  shell.rs  sparkline.rs  theme.rs  updater.rs
src/pages/: cpu.rs  disks.rs  memory.rs  mod.rs  network.rs  overview.rs  processes.rs
