[package]
name = "ruix-dashboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Real-time system resources dashboard built on RUIX engine"
license = "MIT"
publish = false

[dependencies]
ui-core = { path = "../ui-core", features = ["softbuffer-backend"] }
sysinfo = "0.32"
chrono = "0.4"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
